--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
     </div>
     <!-- Social Media ends -->
 
-    <footer class="grid grid-cols-4 mt-10 bg-black h-96 text-white py-10 place-items-center">
+    <footer class="mt-10 py-10 space-y-16 flex flex-col justify-center items-center lg:grid lg:grid-cols-4 lg:mt-10 bg-black lg:h-96 text-white lg:py-10 place-items-center">
       <div class="h-32 w-52 space-y-2">
         <p class="text-2xl">GET IN TOUCH</p>
         <p class="text-slate-400">You can call 24/7. We're here to help you sort your problems</p>
